# lua-cmake

./: CMakeLists.txt
third/: slua.c
